--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "mielina",
   "version": "1.0.0",
-  "description": "",
+  "description": "A central nervous system for your bot.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Edu Mosqueda (bbaaxx)",
+  "license": "MIT",
   "devDependencies": {
     "lerna": "^2.11.0"
   }
