updated reference imp to start wit modular config

--- a/packages/reference-implementation/.env
+++ b/packages/reference-implementation/.env
@@ -23,7 +23,13 @@ FB_WEBHOOK_ENDPOINT="fXezNI9P4JlIPP9ciDuj"
 LUIS_ENDPOINT="https://westus.api.cognitive.microsoft.com/luis/v2.0/apps/"
 LUIS_APPID="74d70ef4-9d85-4cc1-9077-bbaf88e4ca44"
 LUIS_SUBSCRIPTION_KEY="d82cf6fcc02a452a82fd13d8c8ee7318"
+
 ## DialogFlow
+  # v2
+GOOGLE_APPLICATION_CREDENTIALS="./.data/gcpcred.json"
+GOOGLE_PROJECT_ID="bender-5a0e1"
+GOOGLE_SESSION_ID="496a542a482361d2779e37b278ecfd41be6331f8"
+  # v1
 DF_CLIENT_ACCESS_TOKEN="54019f0b5f454cc28441fa75c7157598"
 DF_DEVELOPER_ACCESS_TOKEN="84c43a018ce547db991b069e98c96dae"
 
