--- a/packages/reference-implementation/.env.example
+++ b/packages/reference-implementation/.env.example
@@ -22,7 +22,13 @@ MONGO_URI=
 # LUIS_ENDPOINT=
 # LUIS_APPID=
 # LUIS_SUBSCRIPTION_KEY=
+
 ## DialogFlow
+  # v2
+# GOOGLE_APPLICATION_CREDENTIALS=
+# GOOGLE_PROJECT_ID=
+# GOOGLE_SESSION_ID=
+  # v1
 # DF_CLIENT_ACCESS_TOKEN=
 # DF_DEVELOPER_ACCESS_TOKEN=
 
