--- a/packages/reference-implementation/package.json
+++ b/packages/reference-implementation/package.json
@@ -15,7 +15,7 @@
     "@mielina/adapter-console": "^1.0.0",
     "@mielina/base-servers": "^1.0.0",
     "@mielina/core": "^1.0.0",
-    "@mielina/nlp-dialogflow": "^1.0.0",
+    "@mielina/nlp-apiai": "^1.0.0",
     "dotenv-safe": "^6.0.0"
   }
 }
