--- a/packages/nlp-apiai/package.json
+++ b/packages/nlp-apiai/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mielina/nlp-dialogflow",
+  "name": "@mielina/nlp-apiai",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dialogflow": "^0.6.0",
+    "apiai": "^4.0.3",
     "request": "^2.87.0",
     "request-promise-native": "^1.0.5"
   }
