--- a/packages/reference-implementation/.env.example
+++ b/packages/reference-implementation/.env.example
@@ -1,38 +1,61 @@
+##/ This file is used by dotenv-safe to identify mandatory variables
+##/ uncommented lines denote mandatory values, for an empty default run
+
+
+############################################################
+#/ Basic stuff
 PORT=
 BOT_NAME=
 BOT_NAME_REGEXP=
 NODE_ENV=
 
-# DATABASES
+
+############################################################
+#/ DATABASES
 MONGO_URI=
 
-# PLATFORMS
 
-## Discord
+############################################################
+#/ IO PLATFORMS (examples)
+
+##/ Discord
 # DISCORD_BOT_TOKEN=
-## Facebook
+
+##/ Facebook
 # FB_MESSENGER_APP_SECRET=
 # FB_MESSENGER_VALIDATION_TOKEN=
 # FB_MESSENGER_PAGE_ACCESS_TOKEN=
 # FB_WEBHOOK_ENDPOINT=
 
-# NLP
 
-## LUIS
+############################################################
+#/ NLP
+
+##/ LUIS
 # LUIS_ENDPOINT=
 # LUIS_APPID=
 # LUIS_SUBSCRIPTION_KEY=
 
-## DialogFlow
-  # v2
+##/ DialogFlow
+
+###/ For v2 agents (using @mielina/nlp-dialogflow package)
+#/ Path to a JSON file containing gcp credentials (provided by Google)
 # GOOGLE_APPLICATION_CREDENTIALS=
+
+#/ Project and session IDs
 # GOOGLE_PROJECT_ID=
 # GOOGLE_SESSION_ID=
-  # v1
+
+###/ For v1 agents (using @mielina/nlp-apiai package)
 # DF_CLIENT_ACCESS_TOKEN=
 # DF_DEVELOPER_ACCESS_TOKEN=
 
-# APIS
+
+############################################################
+##/ APIs
+
+###/ These are all examples of other variables that 
+###/ may be used by skills or adapters
 # GOOGLE_SEARCH_API_KEY=
 # GOOGLE_CUSTOM_SEARCH_ENGINE_ID=
 # RIOT_API_KEY=
