--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Edu Mosqueda(@bbaaxx)",
+  "license": "MIT",
   "dependencies": {
     "@mielina/memory-short-term": "^1.0.0",
     "rxjs": "^6.2.1",
@@ -17,6 +17,7 @@
     "@babel/cli": "^7.0.0-beta.51",
     "@babel/core": "^7.0.0-beta.51",
     "@babel/preset-env": "^7.0.0-beta.51",
+    "eslint": "^5.2.0",
     "nodemon": "^1.17.4"
   }
 }
