--- a/packages/memory-short-term/package.json
+++ b/packages/memory-short-term/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Edu Mosqueda(@bbaaxx)",
+  "license": "MIT",
   "dependencies": {
     "node-cache": "^4.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.2.0"
   }
 }
