updated deps for testing and added a test test

--- a/packages/core/.eslintrc
+++ b/packages/core/.eslintrc
@@ -1,10 +1,9 @@
 {
-    "parser": "babel-eslint",
-    "extends": "airbnb",
-    "env": {
-      "mocha": true
-    },
-    "rules": {
-      "comma-dangle": ["error", "only-multiline"]
-    }
+  "parserOptions": {
+    "ecmaVersion": 2018
+  },
+  "env": {
+    "node": true,
+    "mocha": true
   }
+}
