--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -17,7 +17,12 @@
     "@babel/cli": "^7.0.0-beta.51",
     "@babel/core": "^7.0.0-beta.51",
     "@babel/preset-env": "^7.0.0-beta.51",
+    "chai": "^4.1.2",
     "eslint": "^5.2.0",
-    "nodemon": "^1.17.4"
+    "istanbul": "^0.4.5",
+    "mocha": "^5.2.0",
+    "nodemon": "^1.17.4",
+    "sinon": "^6.1.4",
+    "sinon-chai": "^3.2.0"
   }
 }
