--- a/packages/memory-short-term/package.json
+++ b/packages/memory-short-term/package.json
@@ -12,6 +12,11 @@
     "node-cache": "^4.2.0"
   },
   "devDependencies": {
-    "eslint": "^5.2.0"
+    "chai": "^4.1.2",
+    "eslint": "^5.2.0",
+    "istanbul": "^0.4.5",
+    "mocha": "^5.2.0",
+    "sinon": "^6.1.4",
+    "sinon-chai": "^3.2.0"
   }
 }
