--- a/packages/nlp-luis/package.json
+++ b/packages/nlp-luis/package.json
@@ -14,6 +14,11 @@
     "request-promise-native": "^1.0.5"
   },
   "devDependencies": {
-    "eslint": "^5.2.0"
+    "chai": "^4.1.2",
+    "eslint": "^5.2.0",
+    "istanbul": "^0.4.5",
+    "mocha": "^5.2.0",
+    "sinon": "^6.1.4",
+    "sinon-chai": "^3.2.0"
   }
 }
