--- a/packages/reference-implementation/package.json
+++ b/packages/reference-implementation/package.json
@@ -19,6 +19,11 @@
     "dotenv-safe": "^6.0.0"
   },
   "devDependencies": {
-    "eslint": "^5.2.0"    
+    "chai": "^4.1.2",
+    "eslint": "^5.2.0",
+    "istanbul": "^0.4.5",
+    "mocha": "^5.2.0",
+    "sinon": "^6.1.4",
+    "sinon-chai": "^3.2.0"
   }
 }
