Refactored config object and  pipeline

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "@mielina/memory-short-term": "^1.0.0",
+    "immutable": "^4.0.0-rc.12",
     "rxjs": "^6.2.1",
     "rxjs-compat": "^6.2.1"
   },
