--- a/packages/adapter-console/package.json
+++ b/packages/adapter-console/package.json
@@ -9,21 +9,21 @@
   "author": "Edu Mosqueda(@bbaaxx)",
   "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.51",
-    "@babel/core": "^7.0.0-beta.51",
-    "@babel/preset-env": "^7.0.0-beta.51",
-    "chai": "^4.1.2",
-    "eslint": "^5.2.0",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "chai": "^4.2.0",
+    "eslint": "^5.13.0",
     "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
-    "sinon": "^6.1.4",
-    "sinon-chai": "^3.2.0"
+    "sinon": "^7.2.3",
+    "sinon-chai": "^3.3.0"
   },
   "dependencies": {
     "@mielina/base-servers": "^1.0.0",
-    "discord.js": "^11.3.2",
-    "rxjs": "^6.2.1",
-    "rxjs-compat": "^6.2.1",
+    "discord.js": "^11.4.2",
+    "rxjs": "^6.4.0",
+    "rxjs-compat": "^6.4.0",
     "uniquid": "^1.1.4"
   }
 }
