--- a/packages/adapter-console/package.json
+++ b/packages/adapter-console/package.json
@@ -17,7 +17,8 @@
     "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
     "sinon": "^7.2.3",
-    "sinon-chai": "^3.3.0"
+    "sinon-chai": "^3.3.0",
+    "winston": "^3.2.1"
   },
   "dependencies": {
     "@mielina/base-servers": "^1.0.0",
