--- a/packages/adapter-discord/package.json
+++ b/packages/adapter-discord/package.json
@@ -17,7 +17,8 @@
     "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
     "sinon": "^6.1.4",
-    "sinon-chai": "^3.2.0"
+    "sinon-chai": "^3.2.0",
+    "winston": "^3.2.1"
   },
   "dependencies": {
     "discord.js": "^11.3.2",
