--- a/packages/base-servers/package.json
+++ b/packages/base-servers/package.json
@@ -24,6 +24,7 @@
     "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
     "sinon": "^6.1.4",
-    "sinon-chai": "^3.2.0"
+    "sinon-chai": "^3.2.0",
+    "winston": "^3.2.1"
   }
 }
