--- a/packages/nlp-apiai/package.json
+++ b/packages/nlp-apiai/package.json
@@ -15,10 +15,12 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "debug": "^4.1.1",
     "eslint": "^5.2.0",
     "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
     "sinon": "^6.1.4",
-    "sinon-chai": "^3.2.0"
+    "sinon-chai": "^3.2.0",
+    "winston": "^3.2.1"
   }
 }
